--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <li>Change colors as per your preferences</li>
                 <li>React to the sound around you</li>
             </ul>
-            <div class="animated-image-about">hello</div>
+            <div class="animated-image-about">ADDING STUFF HERE</div>
             <!--Contact section-->
             <div id="contact" class="contact-heading">
                 <h1 class="contact-text">Contact</h1>
