got a static matrix ->  make the matrix resisable next

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>WordClock support page</title>
     <!--link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@900&display=swap" rel="stylesheet" /-->
     <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/matrix.css" />
 </head>
 
 <body>
@@ -81,7 +82,14 @@
                 <li>Change colors as per your preferences</li>
                 <li>React to the sound around you</li>
             </ul>
-            <div id="matrix" class="animated-image-about"></div>
+            <div class="animated-image-about">
+                <div class="center">
+                    <div class="frame">
+                        <div id="matrix"></div>
+                    </div>
+                </div>
+            </div>
+            <!--div id="matrix" class="animated-image-about"></div-->
             <!--div id="matrix" class="animated-image-about">
                 <p>HHAPPYLBIRTHDAYT
                     <br>CFJKXCHARLYUIWZT
