--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                     <div class="background-text">
                         <h1>
                             TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSDFSHG
-                            <br />TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSDFSHG
-                            <br />T<span>EXTKUHG</span>GGGJNHGBJHGSHFDANGHEHGVSDFSHG
-                            <br />TEXTKUHGGGGJNHGB<span>JHGSH</span>FDANGHEHGVSDFSHG
-                            <br />TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSDFSHG
-                            <br />TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSDFSHG
+                            <br />K<span>THE</span>FJHLNXLKHJGSJHBNKBCJKBCJKBKLXNJKN
+                            <br />JHG<span>CLOCK</span>DKLJLKJLUITGHOOJSPOJCKLNJKHGF
+                            <br />KLJGHFLKJBJKXBKJHLKJGHFJGBJKCBJTEWGDG
+                            <br />THJSD<span>THAT</span>HCOLHFPCXPF<span>YOU</span>IJKDGHIHAIHGDX
+                            <br />YWOD<span>NEED</span>GHSJGLCGPOIYSGJKBCBKJBXKGHGTW
                         </h1>
                     </div>
                     <!--Sliding Carousel-->
@@ -81,13 +81,10 @@
                 <li>Set reminders</li>
                 <li>Change colors as per your preferences</li>
                 <li>React to the sound around you</li>
+                <li>Show Clock</li>
             </ul>
             <div class="animated-image-about">
-                <div class="center">
-                    <div class="frame">
-                        <div id="matrix"></div>
-                    </div>
-                </div>
+                <div id="matrix"></div>
             </div>
             <!--div id="matrix" class="animated-image-about">
                 <p>HHAPPYLBIRTHDAYT
@@ -125,7 +122,7 @@
                     }
                 </script>
             </div>
-            <div class="footer">&#169 2021 Sahil Yadav</div>
+            <div class="footer">&#169 2021, Sahil Yadav</div>
         </div>
     </div>
     <script src="script/script.js"></script>
