--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                         alert("Copied: " + copyText.value);
                     }
                 </script>
+                <p class="linkedin">linkedin.com/in/sahilyadav127</p>
             </div>
             <div class="footer">&#169 2021, Sahil Yadav</div>
         </div>
