--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         copyText.select();
                         copyText.setSelectionRange(0, 99999);
                         navigator.clipboard.writeText(copyText.value);
-                        alert("Copied: " + copyText.value);
+                        //alert("Copied: " + copyText.value);
                     }
                 </script>
                 <p class="linkedin">linkedin.com/in/sahilyadav127</p>
