--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
                 <h1 class="contact-text">Contact</h1>
             </div>
             <div class="contact-content">
-                <button class="button" onclick="myFunction()"><input type="text" value="sahilyadav127@gmail.com" id="ID"></button>
+                <p class="linkedin">sahilyadav127@gmail.com</p>
+                <!--button class="button" onclick="myFunction()"><input type="text" value="sahilyadav127@gmail.com" id="ID"></button>
                 <script>
                     function myFunction() {
                         var copyText = document.getElementById("ID");
@@ -174,7 +175,7 @@
                         navigator.clipboard.writeText(copyText.value);
                         //alert("Copied: " + copyText.value);
                     }
-                </script>
+                </script-->
                 <p class="linkedin">linkedin.com/in/sahilyadav127</p>
             </div>
 
