added downloadable link

--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
             </div>
             <div class="android">
                 <div class="croppng">
-                    <img class="androidImg" src="images/ios-android-logo.png" alt="">
+                    <a href="app-release.apk"><img class="iosImg" src="images/ios-android-logo.png" alt=""></a>
                 </div>
             </div>
             <div class="ios">
                 <div class="croppng">
-                    <img class="iosImg" src="images/ios-android-logo.png" alt="">
+                    <a href="app-release.apk"><img class="androidImg" src="images/ios-android-logo.png" alt=""></a>
                 </div>
             </div>
             <!--Contact section-->
