complete just add click to copy feature

--- a/index.html
+++ b/index.html
@@ -150,16 +150,16 @@
             <div id="download" class="download-heading">
                 <h1 class="download-text">Download App</h1>
             </div>
-            <div class="android">
+            <a class="android" href="app-release.apk">
                 <div class="croppng">
-                    <a href="app-release.apk"><img class="iosImg" src="images/ios-android-logo.png" alt=""></a>
+                    <img class="androidImg" src="images/ios-android-logo.png" alt="">
                 </div>
-            </div>
-            <div class="ios">
+            </a>
+            <a class="ios" href="javascript:void(0)">
                 <div class="croppng">
-                    <a href="app-release.apk"><img class="androidImg" src="images/ios-android-logo.png" alt=""></a>
+                    <img class="iosImg" src="images/ios-android-logo.png" alt="">
                 </div>
-            </div>
+            </a>
             <!--Contact section-->
             <div id="contact" class="contact-heading">
                 <h1 class="contact-text">Contact</h1>
